<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cafequbaa.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menulist"
        android:name="com.example.cafequbaa.ui.menulist.MenulistFragment"
        android:label="@string/menu"
        tools:layout="@layout/menulist_fragment" />

    <fragment
        android:id="@+id/nav_tablebooking"
        android:name="com.example.cafequbaa.ui.tablebooking.TablebookingFragment"
        android:label="@string/table_booking"
        tools:layout="@layout/tablebooking_fragment" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.cafequbaa.ui.account.accountFragment"
        android:label="@string/your_account"
        tools:layout="@layout/fragment_account" />



    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.cafequbaa.ui.logout.LogoutFragment"
        tools:layout="@layout/logout_fragment"
        android:label="@string/logout"
        />

</navigation>