<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_menulist"
            android:icon="@drawable/restaurant_menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_tablebooking"
            android:icon="@drawable/ic_table"
            android:title="Table Booking" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/account"
                android:title="@string/your_account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
